name:                bark
version:             0.1.0
synopsis:
description:
license:             BSD3
license-file:        LICENSE
author:              Brendan Hay <brendan@soundcloud.com>
maintainer:          Brendan Hay <brendan@soundcloud.com>
homepage:            http://github.com/brendanhay/bark
category:            Events
build-type:          Simple
cabal-version:       >= 1.10
extra-source-files:

executable bark
  main-is:          Main.hs
  hs-source-dirs:   src
  default-language: Haskell2010
  build-depends:    base >= 4.3 && < 5
                  , transformers
                  , unix
                  , split
                  , bytestring
                  , utf8-string
                  , time
                  , uri
                  , conduit
                  , stm
                  , stm-conduit
                  , resourcet
                  , cmdargs
                  , amqp
                  , attoparsec
                  , aeson
