name:               bark
version:            0.1.0
synopsis:
description:
license:            BSD3
license-file:       LICENSE

author:             Brendan Hay <brendan@soundcloud.com>
maintainer:         Brendan Hay <brendan@soundcloud.com>
homepage:           http://github.com/brendanhay/amqp-bark

category:           Logging
stability:          Experimental
build-type:         Simple
cabal-version:      >= 1.10

extra-source-files: README.md

source-repository head
  type:             git
  location:         http://github.com/brendanhay/amqp-bark

executable bark
  main-is:          Main.hs
  hs-source-dirs:   src
  default-language: Haskell2010

  ghc-options:      -Wall -O2 -threaded -rtsopts
  ghc-prof-options: -prof -fprof-auto -auto-all -with-rtsopts=-p

  build-depends:    base >= 4.3 && < 5
                  , mtl
                  , transformers
                  , bytestring
                  , network
                  , resourcet
                  , conduit
                  , stm
                  , stm-conduit
                  , attoparsec
                  , attoparsec-conduit
                  , cmdargs
                  , amqp
                  , hashtables
                  , hashable
                  , split