name:                typhon
version:             0.1
synopsis:
description:
license:             BSD3
license-file:        LICENSE

author:              Brendan Hay
maintainer:          brendan@soundcloud.com
homepage:            http://github.com/brendanhay/typhon

category:            Events
build-type:          Simple
cabal-version:       >= 1.10
extra-source-files:

executable typhon
  default-language: Haskell2010
  main-is:          Main.hs
  build-depends:    base >= 3 && < 5
                  , ghc-prim
                  , regex-compat
                  , http-conduit
                  , utf8-string
                  , bytestring
                  , vector
                  , attoparsec
                  , aeson
