name:                typhon
version:             0.1
synopsis:
description:
license:             BSD3
license-file:        LICENSE

author:              Brendan Hay
maintainer:          brendan@soundcloud.com
homepage:            http://github.com/brendanhay/typhon

category:            Events
build-type:          Simple
cabal-version:       >= 1.10
extra-source-files:

executable typhon
  default-language: Haskell2010
  main-is:          Main.hs
  hs-source-dirs:   src
  build-depends:    base >= 4.3 && < 5
                  , transformers
                  , unix
                  , split
                  , bytestring
                  , time
                  , uri
                  , cmdargs
                  , amqp
                  , attoparsec
                  , aeson
